--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-$foreground_primary: #213734;
+$foreground_primary: #1d403b;
 $foreground_secondary: #81623a;
 $background_primary: #20202088;
 $secondary: #3c3b3d;
