fix numTries bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="grid place-items-center h-screen text-center">
+<div class="grid place-items-center h-screen text-center w-screen">
   <h1 class="text-5xl font-bold">
     Scrumble
   </h1>
