--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ html {
   font-size: 24;
 	font-family: Rockwell,Courier Bold,Courier,Georgia,Times,Times New Roman,serif;
   color: $secondary;
-  background-color: $background_primary;
+  background-color: #f9f9f9;
 }
 
 /**
