--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,14 +5,14 @@
   <h2 class="text-primary">
     "{{hint}}"
   </h2>
-  <div class="text-4xl" class="grid grid-rows-1 text-xl gap-5" [style]="'grid-template-columns: repeat(' + NUM_TRIES + ', minmax(0, 1fr))'">
+  <div class="grid grid-rows-1 text-xs md:text-xl gap-5" [style]="'grid-template-columns: repeat(' + NUM_TRIES + ', minmax(0, 1fr))'">
     <div *ngFor="let move of getMoveDisplay()">
       <div [ngClass]="{'text-selected': move == '✓', 'text-fail': move == 'x'}">
         {{move}}
       </div>
     </div>
   </div>
-  <div class="grid grid-rows-3 text-3xl gap-0 w-96" [style]="'grid-template-columns: repeat(' + numColumns + ', minmax(0, 1fr))'">
+  <div class="grid grid-rows-3 text-xl md:text-3xl gap-0 w-96" [style]="'grid-template-columns: repeat(' + numColumns + ', minmax(0, 1fr))'">
     <div *ngFor="let word of getLetters(2); index as i;">
       <div [ngStyle]="{'opacity': [0, numColumns - 1].includes(i) ? .01 : [1, numColumns - 2].includes(i) ? .02 : .03}">
         {{word}}
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <div class="w-1/6 h-2/6 grid content-normal grid-cols-3 gap-4 font-extrabold text-3xl">
+  <div class="w-40 h-2/6 grid content-normal grid-cols-3 gap-4 font-extrabold text-3xl">
     <div></div>
     <div><button (click)="makeMove('up')" [disabled]="solved || done">↑</button></div>
     <div></div>
@@ -56,7 +56,7 @@
 
 <!--todo - animate this bitch and make it a shared component for future use in other projects-->
 <ng-container *ngIf="showModal">
-  <div class="relative z-10 ease-in-out duration-300" aria-labelledby="modal-title" role="dialog" aria-modal="true">
+  <div class="relative z-10 ease-in-out duration-300 max-h-screen" aria-labelledby="modal-title" role="dialog" aria-modal="true">
     <div class="fixed inset-0 bg-gray-500 bg-opacity-50 transition-opacity" aria-hidden="true"></div>
 
     <div class="fixed inset-0 z-10 w-screen overflow-y-auto">
@@ -107,17 +107,17 @@
           <div class="bg-secondary px-4 pb-4 pt-5 sm:p-6 sm:pb-4">
             <div class="mt-3 text-center sm:ml-4 sm:mt-0">
               <h3 class="text-3xl font-semibold leading-6 text- text-center">Welcome to Scrumble!</h3>
-              <div class="mt-2 text-primary">
+              <div class="mt-2 text-primary text-xs md:text-sm">
                 <br>
-                <p class="text-sm">Scrumble is a word search game where your goal is to find the secret phrase given a hint phrase</p>
+                <p>Scrumble is a word search game where your goal is to find the secret phrase given a hint phrase</p>
                 <br>
-                <p class="text-sm">The catch is that the letters have all been scrumbled! You need to move the frame up and down and side to side to side to line the phrase up in the highlighted area.</p>
+                <p>The catch is that the letters have all been scrumbled! You need to move the frame up and down and side to side to side to line the phrase up in the highlighted area.</p>
                 <br>
-                <p class="text-sm">You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! This is made easier by the fact that Moving the frame up moves every letter up by one, A -> B, B -> C etc. and the opposite is true when you move the frame down</p>
+                <p>You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! This is made easier by the fact that Moving the frame up moves every letter up by one, A -> B, B -> C etc. and the opposite is true when you move the frame down</p>
                 <br>
-                <p class="text-sm">Every day's puzzle is the same, but each player might have a different starting position in the frame, so feel free to share your solution with your friends!</p>
+                <p>Every day's puzzle is the same, but each player might have a different starting position in the frame, so feel free to share your solution with your friends!</p>
                 <br>
-                <p class="text-sm">Good luck!</p>
+                <p>Good luck!</p>
                 <br>
               </div>
             </div>
