--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="grid place-items-center h-screen text-center w-screen">
+<div class="grid place-items-center h-screen text-center w-screen overflow-y-scroll no-scrollbar">
   <div class="h-1 contents">
     <img class="h-40 place-items-center" src="assets/logo.png">
   </div>
