--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <div class="w-40 h-2/6 grid content-normal grid-cols-3 gap-4 font-extrabold text-3xl">
+  <div class="w-50 grid content-normal grid-cols-3 gap-4 font-extrabold text-4xl">
     <div></div>
     <div><button (click)="makeMove('up')" [disabled]="solved || done">↑</button></div>
     <div></div>
