--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="grid place-items-center h-screen text-center w-screen overflow-y-scroll no-scrollbar">
   <div class="h-1 contents">
-    <img class="h-40 place-items-center pt-4 md:pt-0" src="assets/logo.png">
+    <img class="h-40 place-items-center pt-0" src="assets/logo.png">
   </div>
   <h2 class="text-primary">
     "{{hint}}"
@@ -109,11 +109,11 @@
               <h3 class="text-3xl font-semibold leading-6 text- text-center">Welcome to Scrumble!</h3>
               <div class="mt-2 text-primary text-xs md:text-sm">
                 <br>
-                <p>Scrumble is a word search game where your goal is to find the secret phrase given a hint phrase</p>
+                <p>Scrumble is a word search game where your goal is to find the secret phrase and center it so that all the letters are blue given a hint phrase</p>
                 <br>
                 <p>The catch is that the letters have all been scrumbled! You need to move the frame up and down and side to side to side to line the phrase up in the highlighted area.</p>
                 <br>
-                <p>You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! This is made easier by the fact that Moving the frame up moves every letter up by one, A -> B, B -> C etc. and the opposite is true when you move the frame down</p>
+                <p>You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! This is made easier by the fact that moving the frame up moves every letter up by one, A -> B, B -> C etc. and the opposite is true when you move the frame down</p>
                 <br>
                 <p>Every day's puzzle is the same, but each player might have a different starting position in the frame, so feel free to share your solution with your friends!</p>
                 <br>
