--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="grid place-items-center h-screen text-center w-screen overflow-y-scroll no-scrollbar">
   <div class="h-1 contents">
-    <img class="h-40 place-items-center pt-0" src="assets/logo.png">
+    <img class="h-30 md:h-40 place-items-center pt-0" src="assets/logo.png">
   </div>
   <h2 class="text-primary">
     "{{hint}}"
