add buy me a coffee prompt

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,6 +67,8 @@
               <h3 class="text-3xl font-semibold leading-6 text-primary text-center">{{won ? 'Correct!' : 'Better luck next time!'}}</h3>
               <div class="mt-2">
                 <p class="text-sm text-primary">{{won ? 'Well scrumbled' : 'Thanks for playing!'}}</p>
+                <p class="text-sm text-primary">If you like Scrumble and want to say thanks, feel free to buy us a drink :)</p>
+                <a href="https://www.buymeacoffee.com/charliepalm" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important; display: unset;" class="hover:scale-105 transition-all duration-200"></a>
               </div>
             </div>
           </div>
@@ -113,7 +115,7 @@
                 <br>
                 <p>The catch is that the letters have all been scrumbled! You need to move the frame up and down and side to side to side to line the phrase up in the highlighted area.</p>
                 <br>
-                <p>You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! This is made easier by the fact that moving the frame up moves every letter up by one, A -> B, B -> C etc. and the opposite is true when you move the frame down</p>
+                <p>You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! This is made easier by the fact that moving the frame up moves every letter up by one, (A becomes B, B becomes C etc.) and the opposite is true when you move the frame down</p>
                 <br>
                 <p>Every day's puzzle is the same, but each player might have a different starting position in the frame, so feel free to share your solution with your friends!</p>
                 <br>
