--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,13 +111,13 @@
               <h3 class="text-3xl font-semibold leading-6 text- text-center">Welcome to Scrumble!</h3>
               <div class="mt-2 text-primary text-xs md:text-sm">
                 <br>
-                <p>Scrumble is a word search game where your goal is to find the secret phrase and center it so that all the letters are blue given a hint phrase</p>
+                <p>Scrumble is a word search game where your goal is to find the secret phrase and center it so that all the letters are blue.</p>
                 <br>
                 <p>The catch is that the letters have all been scrumbled! You need to move the frame up and down and side to side to side to line the phrase up in the highlighted area.</p>
                 <br>
-                <p>You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! This is made easier by the fact that moving the frame up moves every letter up by one, (A becomes B, B becomes C etc.) and the opposite is true when you move the frame down</p>
+                <p>This is made easier by the fact that moving the frame up moves every letter up by one, (A becomes B, B becomes C etc.) and the opposite is true when you move the frame down. Use this to your advantage to find patterns in the scrumble!</p>
                 <br>
-                <p>Every day's puzzle is the same, but each player might have a different starting position in the frame, so feel free to share your solution with your friends!</p>
+                <p>You also only have {{NUM_TRIES}} attempts, so you have to make your moves count! Every day's puzzle is the same, but each player might have a different starting position in the frame, so feel free to share your solution with your friends!</p>
                 <br>
                 <p>Good luck!</p>
                 <br>
