minor display fix on final modal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -81,8 +81,11 @@
             <div class="mt-3 text-center sm:ml-4 sm:mt-0">
               <h3 class="text-3xl font-semibold leading-6 text-primary text-center">{{won ? 'Correct!' : 'Better luck next time!'}}</h3>
               <div class="mt-2">
-                <p class="text-sm text-primary">{{won ? 'Well scrumbled' : 'Thanks for playing!'}}</p>
+                <br>
+                <p class="text-md text-primary">{{won ? 'Well scrumbled' : 'Thanks for playing'}}!</p>
+                <br>
                 <p class="text-sm text-primary">If you like Scrumble and want to say thanks, feel free to buy us a drink :)</p>
+                <br>
                 <a href="https://www.buymeacoffee.com/charliepalm" target="_blank"><img src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" alt="Buy Me A Coffee" style="height: 60px !important;width: 217px !important; display: unset;" class="hover:scale-105 transition-all duration-200"></a>
               </div>
             </div>
